# CustomPipeline

./: .env.example  .gitignore  CLAUDE.md  CONSTITUTION.md  README.md  ROADMAP.md  RUNTIME_AUDIT.md  RUNTIME_REDESIGN.md  audio.py  booking.py  config.py  llm.py  make_call.py  pyproject.toml  requirements.txt  sarvam_stt.py  sarvam_tts.py  server.py  session.py
.github/workflows/: ci.yml
agents/: __init__.py  priya.json  priya_tools.py
providers/: __init__.py
providers/llm/: openai_compat.py
providers/stt/: deepgram.py
providers/tts/: sarvam.py
runtime/: __init__.py  agent.py  agent_registry.py  clauses.py  context.py  endpointing.py  events.py  interfaces.py  markers.py  metrics.py  resilience.py  sinks.py  tools.py  turn_engine.py  types.py
tests/: conftest.py  test_agent_registry.py  test_audio.py  test_booking.py  test_clauses.py  test_context.py  test_events.py  test_llm.py  test_llm_adapter.py  test_markers.py  test_metrics.py  test_priya_tools.py  test_resilience.py  test_server.py  test_session_events.py  test_session_scripted.py  test_sinks.py  test_stt_reconnect.py  test_tools.py  test_tts_wav.py  test_turn_engine.py  test_vobiz_transport.py
transports/: __init__.py  local.py  vobiz.py
voice_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
