[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-runtime"
version = "0.1.0"
description = "Production-grade conversational AI runtime (Northern Heights voice agent)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "openai>=1.30",
    "numpy>=1.26",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # webrtcvad-wheels is the same C library as webrtcvad, published with
    # wheels for modern CPython (the original has none past cp310)
    "webrtcvad-wheels>=2.0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    # dev-only: expose localhost to Vobiz during testing
    "pyngrok>=7.0",
]

[tool.setuptools]
# Flat modules that remain at the root; orchestration/provider/transport code
# lives in the runtime/, providers/, and transports/ packages
py-modules = [
    "audio",
    "booking",
    "config",
    "make_call",
    "server",
    "session",
]

[tool.setuptools.packages.find]
include = ["runtime*", "providers*", "transports*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ['\.venv']
